fixed layout bugs

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -8,9 +8,6 @@
   --secondary-color: #141414;
   --alt-color: #f8f8f8;
 }
-html {
-  font-size: 62.5%;
-}
 a {
   text-decoration: none;
 }
@@ -18,7 +15,7 @@ li {
   list-style: none;
 }
 body {
-  font-size: 1.6rem;
+  font-size: 16px;
   color: #f8f8f8;
   font-family: "Times new roman", times, sans-serif;
   background-color: var(--secondary-color);
@@ -34,7 +31,7 @@ header {
 }
 .container .logo {
   font-family: "Arial black";
-  font-size: 4rem;
+  font-size: 40px;
 }
 .navbar .menu {
   color: #f8f8f8;
@@ -55,14 +52,14 @@ header {
 }
 .title {
   text-transform: uppercase;
-  font-size: 4rem;
+  font-size: 40px;
   margin-top: 15%;
   font-weight: 900;
   font-family: "Trebuchet MS", monospace;
 }
 .main {
-  font-size: 1.8rem;
-  height: 40rem;
+  font-size: 18px;
+  height: 400px;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -72,44 +69,44 @@ header {
     url("https://br.web.img3.acsta.net/newsv7/19/09/19/21/55/3627282.jpg");
 }
 .description {
-  margin-top: 1rem;
-  margin-bottom: 4rem;
+  margin-top: 10px;
+  margin-bottom: 40px;
 }
 .btns {
-  margin-top: 9rem;
+  margin-top: 90px;
 }
 .btn {
   border: none;
   text-transform: uppercase;
-  font-size: 1.2rem;
-  padding: 1.5rem 3rem;
+  font-size: 12px;
+  padding: 15px 30px;
   background-color: rgba(0, 0, 0, 0.5);
   color: var(--alt-color);
   font-family: sans-serif;
   cursor: pointer;
   font-weight: bold;
   transition: all 0.3s ease-in-out;
-  border-radius: 0.5rem;
+  border-radius: 5px;
 }
 .btn i {
-  margin-right: 0.8rem;
+  margin-right: 8px;
 }
 .btn:hover {
   background-color: white;
   color: black;
 }
 .wrapper {
-  margin-left: 3rem;
+  margin-left: 30px;
 }
 .main .wrapper {
   width: 70%;
 }
 .item img {
-  height: 25rem;
-  width: 25rem;
+  height: 250px;
+  width: 250px;
 }
 .carousel-films {
-  margin-top: 0.5rem;
+  margin-top: 5px;
 }
 /* Responsive layout*/
 @media (max-width: 700px) {
@@ -118,10 +115,10 @@ header {
     flex-direction: column;
   }
   .btn {
-    margin-top: 0.5rem;
-    width: 19.8rem;
-    height: 6rem;
-    margin-right: 0.5rem;
+    margin-top: 5px;
+    width: 198px;
+    height: 60px;
+    margin-right: 5px;
   }
   .btns {
     display: flex;
